--- a/res/layout/setupinternet.xml
+++ b/res/layout/setupinternet.xml
@@ -13,13 +13,17 @@
             android:id="@+id/tableRow1"
             android:layout_width="wrap_content"
             android:layout_height="match_parent" >
-
-            <ImageView
-                android:id="@+id/imageView1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/topmenu" />
-
+				<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+				    android:layout_width="match_parent"
+				    android:layout_height="wrap_content"
+				    android:orientation="vertical"
+				    android:background="@drawable/topmenu_repeat" >
+					    <ImageView
+					        android:id="@+id/imageView1"
+					        android:layout_width="wrap_content"
+					        android:layout_height="wrap_content"
+					        android:src="@drawable/topmenu" />
+				</LinearLayout>
         </TableRow>
 
         <TableRow
