--- a/res/menu/main_menu.xml
+++ b/res/menu/main_menu.xml
@@ -4,5 +4,6 @@
    	<item android:id="@+id/mainmenu_translate" android:icon="@drawable/ic_menu_translate" android:title="@string/menu_translate" />
    	<item android:id="@+id/mainmenu_settings" android:icon="@drawable/ic_menu_settings" android:title="@string/menu_settings" />
     <item android:id="@+id/mainmenu_tips" android:icon="@drawable/ic_menu_tips" android:title="@string/menu_tips" />
+    <item android:id="@+id/mainmenu_donation" android:icon="@drawable/ic_menu_donation" android:title="@string/menu_donation" />
     <item android:id="@+id/mainmenu_exit" android:icon="@drawable/ic_menu_exit" android:title="@string/menu_exit" />
 </menu>
