--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,16 +4,16 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-     <TableLayout android:id="@+id/tableLayout1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1">
+     <TableLayout android:id="@+id/tableLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1">
 	    <WebView
 	        android:id="@+id/webView_main"
-	        android:layout_width="match_parent"
-	        android:layout_height="match_parent" />
+	        android:layout_width="fill_parent"
+	        android:layout_height="fill_parent" />
     </TableLayout>  
-    <TableLayout android:id="@+id/tableLayout2" android:layout_width="match_parent" android:layout_height="45dip">
+    <TableLayout android:id="@+id/tableLayout2" android:layout_width="fill_parent" android:layout_height="45dip">
 	    <TableRow
 	        android:id="@+id/tableRow2"
-	        android:layout_width="match_parent"
+	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content" >
 	
 	        <ImageButton
