Update url paths so user does not get 404 error at startup, And add quick search for other user

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -35,7 +35,7 @@
 	            android:src="@drawable/ic_menu_home" />
 	
 	        <ImageButton
-	            android:onClick="onclick_findtag"
+	            android:onClick="onclick_search"
 	            android:id="@+id/imageButton4"
 	            android:layout_width="wrap_content"
 	            android:background="@null"
